--- a/bachelorThesis3/Components/Pages/Home.razor
+++ b/bachelorThesis3/Components/Pages/Home.razor
@@ -1,7 +1,25 @@
 ﻿@page "/"
 
 <PageTitle>Home</PageTitle>
+<style>
+    body {
+        background-color: #B8EBF1;
+    }
+</style>
 
-<h1>Hello, world!</h1>
+<div class="d-flex justify-content-around align-items-center my-5">
+    <div class="flex-grow-1 mr-3">
+        <h1 class="display-4" style="font-size: 3rem; font-family: 'Comic Sans MS', 'Chalkboard SE', 'Comic Neue', sans-serif;">
+            Trust your team and don’t try to be a hero!
+        </h1>
+        <p style=" font-family: 'Comic Sans MS', 'Chalkboard SE', 'Comic Neue', sans-serif;">Love DevOps? Take It To The Next Level With These Best Practices.</p>
+        <a href="https://learn.microsoft.com/en-us/devops/" class="btn btn-primary" style="background-color:#1DB8CD; border-color:#1DB8CD">LEARN MORE ABOUT DEVOPS</a>
+    </div>
+    <div>
+        <img src="pic.png" class="img-fluid">
+    </div>
 
-Welcome to your new app.
+</div>
+<div class="bottom-right" style="text-align: left; width: 100%;">
+    <span style="color: gray; font-size: 0.75rem;">Bachelor Thesis SUM0035</span>
+</div>
