--- a/bachelorThesis3/Components/Layout/MainLayout.razor
+++ b/bachelorThesis3/Components/Layout/MainLayout.razor
@@ -1,20 +1,18 @@
 ﻿@inherits LayoutComponentBase
 
 <div class="page">
-    <div class="sidebar">
+    <div style="background-image:none;background-color:#1DB8CD;" class="sidebar">
         <NavMenu />
     </div>
 
-    <main>
-        <div class="top-row px-4">
-            <a href="https://learn.microsoft.com/aspnet/core/" target="_blank">About</a>
-        </div>
 
+    <main>
         <article class="content px-4">
             @Body
         </article>
     </main>
 </div>
+
 
 <div id="blazor-error-ui">
     An unhandled error has occurred.
