--- a/bachelorThesis3/Components/Layout/NavMenu.razor
+++ b/bachelorThesis3/Components/Layout/NavMenu.razor
@@ -1,6 +1,6 @@
 ﻿<div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="">bachelorThesis3</a>
+        <a class="navbar-brand" href="" style=" font-family: 'Comic Sans MS', 'Chalkboard SE', 'Comic Neue', sans-serif;">Bachelor Thesis</a>
     </div>
 </div>
 
@@ -9,22 +9,25 @@
 <div class="nav-scrollable" onclick="document.querySelector('.navbar-toggler').click()">
     <nav class="flex-column">
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Home
+            <NavLink class="nav-link" href="" Match="NavLinkMatch.All" style=" font-family: 'Comic Sans MS', 'Chalkboard SE', 'Comic Neue', sans-serif;">
+                <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> DevOps
             </NavLink>
         </div>
 
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
+            <NavLink class="nav-link" href="about" style=" font-family: 'Comic Sans MS', 'Chalkboard SE', 'Comic Neue', sans-serif;">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> About
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="counter" style=" font-family: 'Comic Sans MS', 'Chalkboard SE', 'Comic Neue', sans-serif;">
                 <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Counter
             </NavLink>
         </div>
 
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="weather">
-                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Weather
-            </NavLink>
-        </div>
+
     </nav>
+    
 </div>
+
 
